# bolt-engine-native

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
apps/crystal_plains/: main.cpp
assets/characters/bolt/: ATTRIBUTION.txt  README.md  bolt_gsd.blend  bolt_gsd.glb
assets/characters/bolt/ai3d/: README.txt  bolt_gsd_triposr.glb  bolt_gsd_triposr_3q.glb  triposr_3q_raw.glb  triposr_raw.glb
assets/characters/bolt/import/: test.txt
assets/characters/bolt/pack/: HOW_TO_INTEGRATE_3D.txt  IDENTITY.md  MANIFEST.md  READ_ME_FIRST.txt
assets/characters/bolt/pack/animation/: README.txt
assets/characters/bolt/pack/materials/: bolt_fur.json
assets/characters/bolt/pack_hq/: MANIFEST.md  READ_ME_FIRST.txt
assets/grok_inbox/: README.txt
assets/materials/bolt/: bolt_fur.json
assets/materials/crystal_nebula/: crystal_foliage.json  crystal_ground.json  crystal_path.json  crystal_rock.json  crystal_stalk.json
assets/shaders/: atmos_eval.glsl  blob.frag  blob.frag.spv  blob.vert  blob.vert.spv  bolt.frag  bolt.frag.spv  bolt.vert  bolt.vert.spv  common_pbr.glsl  cull.comp  cull.comp.spv  deferred_light.frag  deferred_light.frag.spv  deferred_light.vert  deferred_light.vert.spv  foliage.frag  foliage.frag.spv  foliage.vert  foliage.vert.glsl  foliage.vert.spv  gbuffer_terrain.frag  gbuffer_terrain.frag.spv  particle.frag  particle.frag.spv  particle.vert  particle.vert.spv  post.frag  post.frag.spv  post.vert  shadow.frag  shadow.vert  shadow.vert.spv  shadow_foliage.vert  shadow_foliage.vert.spv  sky.frag  sky.frag.spv  sky.vert  sky.vert.spv  sky_eval.glsl  (+6 more)
docs/: FOLDER_STRUCTURE.md  GROK_PIPELINE.md  PLAN.md
include/bolt/app/: Application.hpp
include/bolt/assets/: GltfLoader.hpp  MaterialLibrary.hpp  ObjLoader.hpp  TextureLoader.hpp
include/bolt/core/: Log.hpp  Time.hpp
include/bolt/ecs/: Components.hpp  Systems.hpp
include/bolt/pcg/: BoltGsd.hpp  DetailSpawner.hpp  FlyingGenerator.hpp  MeshPrimitives.hpp  PathGenerator.hpp  PathRibbon.hpp  PropMeshes.hpp  RuinGenerator.hpp  SkyGenerator.hpp  StalkMesh.hpp  VegetationSpawner.hpp
include/bolt/render/: GpuMesh.hpp  GpuTexture.hpp  QualityTier.hpp  RenderGraph.hpp  VulkanContext.hpp
include/bolt/sprint/: SpawnBudgets.hpp  SprintCore.hpp
include/bolt/world/: HeightField.hpp  SpawnRules.hpp  TerrainFeatureGenerator.hpp  TerrainMesh.hpp  WorldStreamer.hpp
scripts/: compile_shaders.ps1  fetch_entt.ps1  run_grok_pipeline.ps1
src/app/: Application.cpp
src/assets/: GltfLoader.cpp  MaterialLibrary.cpp  ObjLoader.cpp  TextureLoader.cpp
src/core/: Log.cpp  Time.cpp
src/ecs/: Systems.cpp
src/pcg/: BoltGsd.cpp  DetailSpawner.cpp  FlyingGenerator.cpp  MeshPrimitives.cpp  PathGenerator.cpp  PathRibbon.cpp  PropMeshes.cpp  RuinGenerator.cpp  SkyGenerator.cpp  StalkMesh.cpp  VegetationSpawner.cpp
src/render/: QualityTier.cpp  RenderGraph.cpp  VmaImpl.cpp  VulkanContext.cpp
src/sprint/: SpawnBudgets.cpp  SprintCore.cpp
src/world/: HeightField.cpp  SpawnRules.cpp  TerrainFeatureGenerator.cpp  TerrainMesh.cpp  WorldStreamer.cpp
tools/: blender_make_bolt.py  blender_normalize_ai_bolt.py  probe_hf_3d.py  run_triposr_bolt.py
tools/grok_import/: CMakeLists.txt  GrokMaterialPipeline.cpp  GrokMaterialPipeline.hpp  ImageOps.cpp  ImageOps.hpp  main.cpp
tools/make_sample_ground/: main.cpp
